# grip

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.grip_cache/: cache.json
src/: app.rs  args.rs  cache.rs  collector.rs  config.rs  default_scorer.rs  fs_walk.rs  function_info.rs  grip_report.rs  hidden_dep_finder.rs  item_counts.rs  lib.rs  main.rs  module_stats.rs  offender.rs  overall_stats.rs  reporter.rs  scorer.rs  stdout_reporter.rs  unsafe_finder.rs  walk.rs
src/traits/: mod.rs  reporter.rs  scorer.rs  walk.rs
tests/: all_tests.rs  app_tests.rs  args_tests.rs  cache_tests.rs  collector_tests.rs  config_tests.rs  default_scorer_tests.rs  fixture_tests.rs  fs_walk_tests.rs  grip_report_tests.rs  item_counts_tests.rs  lib_tests.rs  main_tests.rs  module_stats_tests.rs  overall_stats_tests.rs  reporter_tests.rs  scorer_tests.rs  stdout_reporter_tests.rs
tests/fixtures/clean_calc/.grip_cache/: cache.json
tests/fixtures/clean_calc/src/: display.rs  lib.rs  ops.rs  processor.rs  types.rs
tests/fixtures/clean_calc/tests/: analysis_tests.rs
tests/fixtures/sloppy_calc/.grip_cache/: cache.json
tests/fixtures/sloppy_calc/src/: display.rs  lib.rs  ops.rs  processor.rs  types.rs
tests/fixtures/sloppy_calc/tests/: analysis_tests.rs
